--- a/app/src/main/res/layout/layout_cell_player_games_picks.xml
+++ b/app/src/main/res/layout/layout_cell_player_games_picks.xml
@@ -97,6 +97,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/imageview_player_games_separator_1"
+            android:layout_marginBottom="5dp"
             >
 
             <TextView
@@ -150,6 +151,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/imageview_player_games_separator_2"
+            android:layout_marginBottom="5dp"
             >
 
             <TextView
@@ -205,6 +207,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_below="@id/imageview_player_games_separator_3"
+            android:layout_marginBottom="5dp"
             >
 
             <TextView
