--- a/app/src/main/res/layout/layout_cell_betslip.xml
+++ b/app/src/main/res/layout/layout_cell_betslip.xml
@@ -148,7 +148,8 @@
         android:id="@+id/spinner_betslip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone">
+        android:visibility="gone"
+        >
 
     </Spinner>
 
