--- a/app/src/main/res/layout/layout_cell_leaderboard_users.xml
+++ b/app/src/main/res/layout/layout_cell_leaderboard_users.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:text="1."
             android:layout_marginLeft="10dp"
-
+            android:layout_marginTop="10dp"
             />
 
         <ImageView
@@ -29,12 +29,15 @@
             android:layout_marginLeft="10dp"
             />
 
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1.0"
             android:orientation="vertical"
-            android:layout_marginLeft="10dp">
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            >
 
             <TextView
                 android:id="@+id/textview_leaderboard_user_name"
@@ -52,10 +55,16 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
+
             <Button
                 android:id="@+id/button_leaderboard_user_buy_picks"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="25dp"
 
                 android:text="Buy Picks"
                 android:background="@drawable/blue_button_small"
@@ -63,6 +72,22 @@
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
                 />
+
+            <Button
+                android:id="@+id/button_leaderboard_follow_unfollow"
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:layout_marginTop="10dp"
+                android:text="Follow"
+                android:background="@drawable/blue_button_small"
+                android:textColor="#ffffffff"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                />
+
+
+            </LinearLayout>
+
 
     </LinearLayout>
 
