--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,26 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+	<dimen name="activity_horizontal_margin">12dp</dimen>
+	<dimen name="activity_vertical_margin">16dp</dimen>
+
+	<dimen name="font_xlarge">21sp</dimen>
+	<dimen name="font_large">18sp</dimen>
+	<dimen name="font_medium">16sp</dimen>
+	<dimen name="font_small">14sp</dimen>
+	<dimen name="font_tiny">12sp</dimen>
+	<dimen name="font_huge">104sp</dimen>
+
+	<dimen name="title_bar_height">50dp</dimen>
+	<dimen name="form_view_width">280dp</dimen>
+	<dimen name="form_view_height">32dp</dimen>
+	<dimen name="button_height">42dp</dimen>
+
+	<dimen name="listItemDividerHeight">2dp</dimen>
+	<dimen name="heightDividerLine">1dp</dimen>
+	<dimen name="marginHeader">48dp</dimen>
+	<dimen name="marginxLarge">32dp</dimen>
+	<dimen name="marginLarge">24dp</dimen>
+	<dimen name="marginMedium">16dp</dimen>
+	<dimen name="marginSmall">12dp</dimen>
+	<dimen name="marginTiny">4dp</dimen>
 </resources>
