--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,19 @@
         <!-- Customize your theme here. -->
     </style>
 
+
+    <style name="Widget" />
+
+    <style name="Widget.Button" parent="Widget.AppCompat.Button">
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/button_height</item>
+        <item name="android:textSize">@dimen/font_small</item>
+    </style>
+
+    <style name="Widget.Button.Blue">
+        <item name="android:background">@drawable/blue_button</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
