--- a/app/src/main/res/layout/fragment_create_pool.xml
+++ b/app/src/main/res/layout/fragment_create_pool.xml
@@ -1,72 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
-		xmlns:android="http://schemas.android.com/apk/res/android"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		>
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="wrap_content"
+	>
 
 	<LinearLayout
-			android:orientation="vertical"
+		android:orientation="vertical"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:paddingLeft="@dimen/activity_horizontal_margin"
+		android:paddingRight="@dimen/activity_horizontal_margin"
+		android:paddingTop="@dimen/activity_vertical_margin"
+		android:paddingBottom="@dimen/activity_vertical_margin"
+		>
+
+		<TextView
 			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:paddingLeft="@dimen/activity_horizontal_margin"
-			android:paddingRight="@dimen/activity_horizontal_margin"
-			android:paddingTop="@dimen/activity_vertical_margin"
-			android:paddingBottom="@dimen/activity_vertical_margin"
-			>
-
-		<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginBottom="@dimen/marginTiny"
-				android:text="Pool Name"
-				/>
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="@dimen/marginTiny"
+			android:text="Pool Name"
+			/>
 
 		<EditText
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:id="@+id/edt_pool_name"
-				android:layout_marginBottom="@dimen/marginSmall"
-				/>
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/edt_pool_name"
+			android:layout_marginBottom="@dimen/marginSmall"
+			/>
 
 		<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginBottom="@dimen/marginTiny"
-				android:text="Pool Moto"
-				/>
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="@dimen/marginTiny"
+			android:text="Pool Moto"
+			/>
 
 		<EditText
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginBottom="@dimen/marginSmall"
-				android:id="@+id/edt_pool_motto"
-				/>
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="@dimen/marginSmall"
+			android:id="@+id/edt_pool_motto"
+			/>
 
 		<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginBottom="@dimen/marginTiny"
-				android:text="Pool Description"
-				/>
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="@dimen/marginTiny"
+			android:text="Pool Description"
+			/>
 
 		<EditText
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginBottom="@dimen/marginSmall"
-				android:id="@+id/edt_pool_desc"
-				android:singleLine="false"
-				android:lines="3"
-				android:gravity="top"
-				/>
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="@dimen/marginSmall"
+			android:id="@+id/edt_pool_desc"
+			android:singleLine="false"
+			android:lines="3"
+			android:gravity="top"
+			/>
 
 
 		<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginBottom="@dimen/marginTiny"
-				android:text="Select Sport"
-				/>
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="@dimen/marginTiny"
+			android:text="Select Sport"
+			/>
 
 		<Spinner
 			android:layout_width="match_parent"
@@ -75,138 +76,146 @@
 			></Spinner>
 
 		<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginBottom="@dimen/marginTiny"
-				android:text="Pool Privacy"
-				/>
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="@dimen/marginTiny"
+			android:text="Pool Privacy"
+			/>
 
 		<RadioGroup
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="@dimen/marginSmall"
+			android:id="@+id/radio_pool_privacy"
+			>
+
+			<RadioButton
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:layout_marginBottom="@dimen/marginSmall"
-				android:id="@+id/radio_pool_privacy"
-				>
+				android:paddingLeft="@dimen/marginTiny"
+				android:id="@+id/radio_open_pool"
+				android:textSize="@dimen/font_small"
+				android:text="Open (Everyone can join and view)"
+				/>
 
 			<RadioButton
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:paddingLeft="@dimen/marginTiny"
-					android:id="@+id/radio_open_pool"
-					android:textSize="@dimen/font_small"
-					android:text="Open (Everyone can join and view)"
-					/>
-
-			<RadioButton
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:paddingLeft="@dimen/marginTiny"
-					android:id="@+id/radio_private_pool"
-					android:textSize="@dimen/font_small"
-					android:text="Private (Only invited can join and participate)"
-					/>
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:paddingLeft="@dimen/marginTiny"
+				android:id="@+id/radio_private_pool"
+				android:textSize="@dimen/font_small"
+				android:text="Private (Only invited can join and participate)"
+				/>
 		</RadioGroup>
 
 		<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginBottom="@dimen/marginTiny"
-				android:text="Pool Size"
-				/>
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="@dimen/marginTiny"
+			android:text="Pool Size"
+			/>
 
 		<RadioGroup
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:orientation="horizontal"
+			android:layout_marginBottom="@dimen/marginSmall"
+			android:id="@+id/radio_pool_size"
+			>
+
+			<RadioButton
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:orientation="horizontal"
-				android:layout_marginBottom="@dimen/marginSmall"
-				android:id="@+id/radio_pool_size"
-				>
+				android:paddingLeft="@dimen/marginTiny"
+				android:id="@+id/radio_unlimited_size"
+				android:textSize="@dimen/font_small"
+				android:text="Unlimited"
+				android:layout_weight="1"
+				/>
 
 			<RadioButton
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:paddingLeft="@dimen/marginTiny"
-					android:id="@+id/radio_unlimited_size"
-					android:textSize="@dimen/font_small"
-					android:text="Unlimited"
-					android:layout_weight="1"
-					/>
-
-			<RadioButton
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:paddingLeft="@dimen/marginTiny"
-					android:id="@+id/radio_limited_size"
-					android:textSize="@dimen/font_small"
-					android:text="Limited"
-					android:layout_weight="1"
-					/>
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:paddingLeft="@dimen/marginTiny"
+				android:id="@+id/radio_limited_size"
+				android:textSize="@dimen/font_small"
+				android:text="Limited"
+				android:layout_weight="1"
+				/>
 		</RadioGroup>
 
 		<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginBottom="@dimen/marginTiny"
-				android:text="Minimum people for pool to go live"
-				/>
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="@dimen/marginTiny"
+			android:text="Minimum people for pool to go live"
+			/>
 
 		<EditText
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginBottom="@dimen/marginSmall"
-				android:id="@+id/edt_min_pool_size"
-				/>
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="@dimen/marginSmall"
+			android:id="@+id/edt_min_pool_size"
+			/>
 
 		<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginBottom="@dimen/marginTiny"
-				android:text="Amount"
-				/>
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="@dimen/marginTiny"
+			android:text="Amount"
+			/>
 
 		<EditText
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginBottom="@dimen/marginSmall"
-				android:inputType="numberDecimal"
-				android:id="@+id/edt_amount"
-				/>
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="@dimen/marginSmall"
+			android:inputType="numberDecimal"
+			android:id="@+id/edt_amount"
+			tools:text="100"
+			/>
 
 		<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginBottom="@dimen/marginTiny"
-				android:text="Select Time Frame"
-				/>
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="@dimen/marginTiny"
+			android:text="Select Time Frame"
+			/>
 
 		<EditText
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginBottom="@dimen/marginSmall"
-				android:inputType="date"
-				android:id="@+id/edt_from_date"
-				/>
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="@dimen/marginSmall"
+			android:inputType="date"
+			android:id="@+id/edt_from_date"
+			android:gravity="left|center_vertical"
+			tools:text="2015-09-12"
+			android:editable="false"
+			android:focusable="false"
+			/>
 
 		<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginBottom="@dimen/marginTiny"
-				android:text="To"
-				/>
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="@dimen/marginTiny"
+			android:text="To"
+			/>
 
 		<EditText
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginBottom="@dimen/marginSmall"
-				android:inputType="date"
-				android:id="@+id/edt_to_date"
-				/>
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="@dimen/marginSmall"
+			android:inputType="date"
+			android:id="@+id/edt_to_date"
+			android:editable="false"
+			android:focusable="false"
+			tools:text="2015-12-12"
+			/>
 
 		<Button
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:text="Create Pool"
-				android:id="@+id/btn_create_pool"
-				/>
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:text="Create Pool"
+			android:id="@+id/btn_create_pool"
+			/>
 	</LinearLayout>
 </ScrollView>
