--- a/app/src/main/res/layout/layout_cell_games_list.xml
+++ b/app/src/main/res/layout/layout_cell_games_list.xml
@@ -257,7 +257,7 @@
             android:gravity="center"
             android:maxLines="3"
             android:minLines="3"
-            android:text="Over \n| 5 |\nUnder"
+            android:text="@string/text_over_under_value"
             android:textSize="14sp"
 
             />
