--- a/app/src/main/res/layout/layout_cell_my_picks_list.xml
+++ b/app/src/main/res/layout/layout_cell_my_picks_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+			  xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="10dp"
@@ -78,7 +79,7 @@
             </RelativeLayout>
 
             <TextView
-                android:id="@+id/textview_cell_my_picks_team_a_name"
+                android:id="@+id/tv_match_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -107,14 +108,14 @@
                     />
 
                 <TextView
-                    android:id="@+id/textview_cell_my_picks_team_name"
+                    android:id="@+id/tv_team_name"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:gravity="right"
                     android:minLines="1"
                     android:maxLines="2"
-                    android:text="California Dragons"
+                    tools:text="California Dragons"
                     android:textColor="#ffff3100"
                     android:textSize="14sp"
                     android:textStyle="bold"
@@ -135,26 +136,30 @@
 
 
                 <TextView
-                    android:id="@+id/textview_cell_my_picks_pool_label"
+                    android:id="@+id/tv_pool_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Pool Name :"
                     android:textSize="14sp"
-                    android:visibility="gone" />
+                    android:visibility="gone"
+					tools:visibility="visible"
+						/>
 
                 <TextView
-                    android:id="@+id/textview_cell_my_picks_pool_name"
+                    android:id="@+id/tv_pool_name"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:gravity="right"
                     android:minLines="1"
                     android:maxLines="2"
-                    android:text="California Dragons"
+                    tools:text="California Dragons"
                     android:textColor="#ffff3100"
                     android:textSize="14sp"
                     android:textStyle="bold"
-                    android:visibility="gone" />
+                    android:visibility="gone"
+                    tools:visibility="visible"
+						/>
 
             </RelativeLayout>
 
