Changed package name, hide private option for create pool, setup push notification and in-app

--- a/app/src/main/res/layout/fragment_create_pool.xml
+++ b/app/src/main/res/layout/fragment_create_pool.xml
@@ -105,7 +105,7 @@
 				android:id="@+id/radio_private_pool"
 				android:textSize="@dimen/font_small"
 				android:text="Private (Only invited can join and participate)"
-				/>
+				android:visibility="gone" />
 		</RadioGroup>
 
 		<TextView
